--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,7 +1,13 @@
-//= partials/head.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Gulp Starter</title>
+	<link rel="stylesheet" href="css/libs.css">
+	<link rel="stylesheet" href="css/style.css">
+</head>
 <body>
 	//= partials/header.html
-	
 	
 	//= partials/footer.html
 	//= partials/scripts.html
